# five-in-a-row-game

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmake-build-debug.sh  cmake-build-release.sh  cmake-build.sh  cmake-configure-debug.sh  cmake-configure-release.sh  cmake-debug.sh  cmake-generate-debug.sh  cmake-generate.sh  cmake-release.sh  cmake.sh  run-debug  run-debug.sh  run-release.sh  run.sh
.github/workflows/: cmake.yml  codeql.yml
include/five_in_a_row_game/: ai_player.h  ai_player_factory.h  ai_player_fwd.h  application.h  application_fwd.h  board.h  board_coordinate.h  board_fwd.h  callbacks.h  camera.h  easy_ai_player.h  easy_ai_player_factory.h  easy_ai_player_fwd.h  five_in_a_row_game.h  fragment_shader.h  game_board.h  game_object.h  game_object_selector.h  human_player.h  human_player_factory.h  log_level.h  logger.h  main.h  move.h  player.h  player_factory.h  program.h  shader.h  shader_errors.h  shader_program.h  shader_program_fwd.h  state.h  stone_type.h  texture.h  texture2d.h  texture2d_fwd.h  time.h  timer.h  utility.h  vector2d.h  (+2 more)
shader/: fragment.frag  fragment.glsl  simple.frag  simple.vert  vertex.glsl  vertex.vert
src/: CMakeLists.txt  ai_player.cc  ai_player_factory.cc  ai_player_fwd.h  application.cc  board.cc  board.h  board_coordinate.cc  board_coordinate.h  callbacks.cc  camera.cc  easy_ai_player.cc  easy_ai_player.h  easy_ai_player_factory.cc  easy_ai_player_factory.h  easy_ai_player_fwd.h  five_in_a_row_game.cc  five_in_a_row_game.h  fragment_shader.cc  game_board.cc  game_object_selector.cc  human_player.cc  human_player.h  human_player_factory.cc  log_level.cc  logger.cc  main.cc  player.cc  player.h  player_factory.cc  program.cc  program.h  shader.cc  shader_program.cc  texture.cc  texture2d.cc  time.cc  timer.cc  utility.cc  vertex_shader.cc  (+1 more)
test/: CMakeLists.txt  main.cc
